Removed command line args