@@ -57,10 +57,6 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <configuration>
           <mainClass>com.bairontapia.projects.cuidamed.CuidaMedApplication</mainClass>
-          <options>
-            <option>--add-opens</option>
-            <option>javafx.graphics/com.sun.javafx.text=ALL-UNNAMED</option>
-          </options>
           <runtimePathOption>CLASSPATH</runtimePathOption>
         </configuration>
         <groupId>org.openjfx</groupId>
